--- a/index.html
+++ b/index.html
@@ -3,40 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Digital Mission 2026</title>
+    <title>ልማት Hub | 2026 Portal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        /* BRAND COLORS FROM MISSION IMAGES */
-        :root { --ethiopia-blue: #003973; --ethiopia-yellow: #FFD700; --bg-gray: #f4f7f6; }
+        :root { --blue: #003973; --yellow: #FFD700; --gray: #f4f7f6; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
+        body { background: var(--gray); color: #333; }
+
+        /* HEADER & TICKER */
+        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; position: fixed; width: 100%; top: 0; z-index: 1000; }
+        header { background: #fff; padding: 60px 5% 20px; text-align: center; border-bottom: 1px solid #ddd; margin-top: 20px; }
+
+        .container { max-width: 1100px; margin: 0 auto; padding: 40px 5%; }
+
+        /* LOGIN BOX */
+        #login-page { display: block; }
+        .login-card { background: var(--blue); color: white; padding: 50px; border-radius: 20px; text-align: center; border: 4px solid var(--yellow); box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
+        .fayda-input { width: 100%; max-width: 400px; padding: 15px; margin: 25px 0; border-radius: 10px; border: none; font-size: 1.2rem; text-align: center; }
+        .btn { background: var(--yellow); color: var(--blue); padding: 15px 40px; border: none; border-radius: 10px; font-weight: 800; cursor: pointer; font-size: 1.1rem; text-transform: uppercase; }
+
+        /* DASHBOARD (Hidden) */
+        #dashboard { display: none; }
+        .welcome-banner { background: var(--blue); color: white; padding: 40px; border-radius: 20px; display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px; }
         
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; }
-        body { background: var(--bg-gray); color: #333; line-height: 1.6; }
+        /* 10 TRACKS GRID */
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin: 30px 0; }
+        .track-card { background: white; padding: 25px; border-radius: 15px; border-top: 6px solid var(--blue); box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: left; }
+        .track-card i { color: var(--blue); font-size: 2rem; margin-bottom: 15px; display: block; }
+        .track-card h4 { color: var(--blue); margin-bottom: 8px; }
 
-        /* ACTIVE TICKER */
-        .ticker-wrap { background: var(--ethiopia-yellow); color: var(--ethiopia-blue); padding: 12px; font-weight: bold; position: fixed; width: 100%; top: 0; z-index: 2000; text-align: center; }
+        /* FAQ */
+        .faq-box { background: white; padding: 40px; border-radius: 20px; margin-top: 40px; text-align: left; }
+        .faq-item { margin-bottom: 20px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
 
-        /* MAIN CONTENT AREA */
-        .wrapper { max-width: 1100px; margin: 100px auto; padding: 0 20px; }
+        footer { background: #111; color: white; padding: 50px 5%; text-align: center; border-top: 6px solid var(--yellow); margin-top: 60px; }
+    </style>
+</head>
+<body>
 
-        /* PORTAL LOGIN CARD */
-        #login-screen { background: var(--ethiopia-blue); color: white; padding: 60px 30px; border-radius: 20px; border: 4px solid var(--ethiopia-yellow); text-align: center; box-shadow: 0 20px 50px rgba(0,0,0,0.2); display: block; }
-        .fayda-input { width: 100%; max-width: 400px; padding: 18px; margin: 25px 0; border-radius: 12px; border: none; font-size: 1.3rem; text-align: center; color: #111; }
-        .btn-verify { background: var(--ethiopia-yellow); color: var(--ethiopia-blue); padding: 20px 50px; border: none; border-radius: 12px; font-weight: 900; cursor: pointer; font-size: 1.2rem; text-transform: uppercase; transition: 0.3s; }
-        .btn-verify:hover { background: #fff; transform: translateY(-3px); }
+<div class="ticker">MISSION 2026: National Digital Strategy Enrollment Open • Verified by Fayda ID</div>
 
-        /* DASHBOARD (THE 10 TRACKS) */
-        #dashboard-screen { display: none; text-align: left; }
-        .welcome-header { background: var(--ethiopia-blue); color: white; padding: 40px; border-radius: 20px; display: flex; justify-content: space-between; align-items: center; margin-bottom: 40px; }
-        
-        .grid-10 { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 50px; }
-        .track-card { background: white; padding: 25px; border-radius: 15px; border-top: 6px solid var(--ethiopia-blue); box-shadow: 0 10px 20px rgba(0,0,0,0.05); transition: 0.3s; }
-        .track-card:hover { border-top-color: var(--ethiopia-yellow); transform: translateY(-5px); }
-        .track-card i { font-size: 2rem; color: var(--ethiopia-blue); margin-bottom: 15px; }
-        .track-card h4 { color: var(--ethiopia-blue); margin-bottom: 10px; font-size: 1.1rem; }
+<header>
+    <h1 style="color: var(--blue); font-size: 2.5rem;">ልማት Hub</h1>
+</header>
 
-        /* FAQ SECTION */
-        .faq-box { background: white; padding: 40px; border-radius: 20px; border: 1px solid #ddd; }
-        .faq-item { margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
-        .faq-item h4 { color: var(--ethiopia-blue); font-size: 1.2rem; margin-bottom: 10px; }
+<div class="container">
 
-        footer { background: #11
+    <div id="login-page">
+        <div class="login-card">
+            <h2 style="color: var(--yellow);">Portal Login</h2>
+            <p>Please enter your Fayda National ID to unlock your dashboard.</p>
+            <input type="number" id="id-box" class="fayda-input" placeholder="Enter ID Number">
+            <br>
+            <button class="btn" onclick="showDashboard()">Verify & Access</button>
+        </div>
+    </div>
+
+    <div id="dashboard">
+        <div class="welcome-banner">
+            <div>
+                <h1 style="color: var(--yellow);">Welcome, Citizen</h1>
+                <p>Status: <i class="fas fa-check-circle"></i> Fayda ID Verified</p>
+            </div>
+            <i class="fas fa-user-shield fa-4x" style="opacity: 0.3;"></i>
+        </div>
+
+        <h2 style="color: var(--blue); margin-bottom: 20px; text-align: left;">Your 10 Specialized Tracks</h2>
+        <div class="grid">
+            <div class="track-card"><i class="fas fa-robot"></i><h4>AI Engineering</h4><p>Neural networks.</p></div>
+            <div class="track-card"><i class="fas fa-shield-alt"></i><h4>Cyber Security</h4><p>Network defense.</p></div>
+            <div
