--- a/index.html
+++ b/index.html
@@ -1,75 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | 2026 Portal</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>ልማት Hub | Portal 2026</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --gray: #f4f7f6; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
-        body { background: var(--gray); color: #333; }
-
-        /* HEADER & TICKER */
-        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; position: fixed; width: 100%; top: 0; z-index: 1000; }
-        header { background: #fff; padding: 60px 5% 20px; text-align: center; border-bottom: 1px solid #ddd; margin-top: 20px; }
-
-        .container { max-width: 1100px; margin: 0 auto; padding: 40px 5%; }
-
-        /* LOGIN BOX */
-        #login-page { display: block; }
-        .login-card { background: var(--blue); color: white; padding: 50px; border-radius: 20px; text-align: center; border: 4px solid var(--yellow); box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
-        .fayda-input { width: 100%; max-width: 400px; padding: 15px; margin: 25px 0; border-radius: 10px; border: none; font-size: 1.2rem; text-align: center; }
-        .btn { background: var(--yellow); color: var(--blue); padding: 15px 40px; border: none; border-radius: 10px; font-weight: 800; cursor: pointer; font-size: 1.1rem; text-transform: uppercase; }
-
-        /* DASHBOARD (Hidden) */
-        #dashboard { display: none; }
-        .welcome-banner { background: var(--blue); color: white; padding: 40px; border-radius: 20px; display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px; }
+        body { font-family: sans-serif; margin: 0; background: #f0f2f5; color: #333; text-align: center; }
+        .ticker { background: #FFD700; color: #003973; padding: 10px; font-weight: bold; }
+        .container { max-width: 800px; margin: 50px auto; padding: 20px; }
         
-        /* 10 TRACKS GRID */
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin: 30px 0; }
-        .track-card { background: white; padding: 25px; border-radius: 15px; border-top: 6px solid var(--blue); box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: left; }
-        .track-card i { color: var(--blue); font-size: 2rem; margin-bottom: 15px; display: block; }
-        .track-card h4 { color: var(--blue); margin-bottom: 8px; }
+        /* LOGIN BOX */
+        #login-area { background: #003973; color: white; padding: 40px; border-radius: 15px; border: 4px solid #FFD700; }
+        input { padding: 15px; width: 80%; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; }
+        button { background: #FFD700; color: #003973; padding: 15px 30px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 1rem; }
 
-        /* FAQ */
-        .faq-box { background: white; padding: 40px; border-radius: 20px; margin-top: 40px; text-align: left; }
-        .faq-item { margin-bottom: 20px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
-
-        footer { background: #111; color: white; padding: 50px 5%; text-align: center; border-top: 6px solid var(--yellow); margin-top: 60px; }
+        /* DASHBOARD - HIDDEN BY DEFAULT */
+        #dashboard { display: none; text-align: left; background: white; padding: 30px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
+        .track-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 20px; }
+        .track { padding: 15px; border: 1px solid #ddd; border-left: 5px solid #003973; border-radius: 5px; }
+        
+        footer { margin-top: 50px; padding: 20px; font-size: 0.8rem; color: #666; }
     </style>
 </head>
 <body>
 
-<div class="ticker">MISSION 2026: National Digital Strategy Enrollment Open • Verified by Fayda ID</div>
-
-<header>
-    <h1 style="color: var(--blue); font-size: 2.5rem;">ልማት Hub</h1>
-</header>
+<div class="ticker">MISSION 2026: DIGITAL ETHIOPIA PORTAL ACTIVE</div>
 
 <div class="container">
-
-    <div id="login-page">
-        <div class="login-card">
-            <h2 style="color: var(--yellow);">Portal Login</h2>
-            <p>Please enter your Fayda National ID to unlock your dashboard.</p>
-            <input type="number" id="id-box" class="fayda-input" placeholder="Enter ID Number">
-            <br>
-            <button class="btn" onclick="showDashboard()">Verify & Access</button>
-        </div>
+    <div id="login-area">
+        <h1>ልማት Hub</h1>
+        <p>Enter Fayda ID to Unlock 10 Tracks & FAQ</p>
+        <input type="number" id="idInput" placeholder="Enter National ID Number">
+        <br>
+        <button onclick="startPortal()">VERIFY & ENTER</button>
     </div>
 
     <div id="dashboard">
-        <div class="welcome-banner">
-            <div>
-                <h1 style="color: var(--yellow);">Welcome, Citizen</h1>
-                <p>Status: <i class="fas fa-check-circle"></i> Fayda ID Verified</p>
-            </div>
-            <i class="fas fa-user-shield fa-4x" style="opacity: 0.3;"></i>
-        </div>
-
-        <h2 style="color: var(--blue); margin-bottom: 20px; text-align: left;">Your 10 Specialized Tracks</h2>
-        <div class="grid">
-            <div class="track-card"><i class="fas fa-robot"></i><h4>AI Engineering</h4><p>Neural networks.</p></div>
-            <div class="track-card"><i class="fas fa-shield-alt"></i><h4>Cyber Security</h4><p>Network defense.</p></div>
-            <div
+        <h2 style="color:#003973">Welcome to your Dashboard</h2>
+        <p>Status: <b>Verified Member</b></p>
+        <hr>
+        <h3>The 10 Official Tracks:</h3>
+        <div class="track-grid">
+            <div class="track">1. AI Engineering</div>
+            <div class="track">2. Cyber Security</div>
+            <div class="track">3. Data Science</div>
+            <div class="track">4. Cloud DevOps</div>
+            <div class="track">5. Full-Stack Web</div>
+            <div class="track">6. Blockchain</div>
+            <div class="track">7. Mobile App Dev</div>
