--- a/index.html
+++ b/index.html
@@ -1,49 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ልማት Hub | Portal 2026</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Digital 2026</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        body { font-family: sans-serif; margin: 0; background: #f0f2f5; color: #333; text-align: center; }
-        .ticker { background: #FFD700; color: #003973; padding: 10px; font-weight: bold; }
-        .container { max-width: 800px; margin: 50px auto; padding: 20px; }
-        
-        /* LOGIN BOX */
-        #login-area { background: #003973; color: white; padding: 40px; border-radius: 15px; border: 4px solid #FFD700; }
-        input { padding: 15px; width: 80%; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; }
-        button { background: #FFD700; color: #003973; padding: 15px 30px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; font-size: 1rem; }
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
+        body { background: var(--bg); color: #333; text-align: center; }
 
-        /* DASHBOARD - HIDDEN BY DEFAULT */
-        #dashboard { display: none; text-align: left; background: white; padding: 30px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
-        .track-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 20px; }
-        .track { padding: 15px; border: 1px solid #ddd; border-left: 5px solid #003973; border-radius: 5px; }
+        /* TICKER */
+        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; position: fixed; width: 100%; top: 0; z-index: 1000; }
         
-        footer { margin-top: 50px; padding: 20px; font-size: 0.8rem; color: #666; }
+        .container { max-width: 1100px; margin: 80px auto 40px; padding: 20px; }
+
+        /* 1. LOGIN SECTION */
+        .login-box { background: var(--blue); color: white; padding: 50px 20px; border-radius: 20px; border: 4px solid var(--yellow); margin-bottom: 50px; }
+        .input-fld { padding: 15px; width: 80%; max-width: 400px; margin: 20px 0; border-radius: 10px; border: none; font-size: 1.2rem; text-align: center; }
+        .btn-v { background: var(--yellow); color: var(--blue); padding: 18px 40px; border: none; border-radius: 10px; font-weight: 900; cursor: pointer; text-transform: uppercase; }
+
+        /* 2. THE 10 TRACKS GRID */
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin: 40px 0; }
+        .card { background: white; padding: 25px; border-radius: 15px; border-top: 6px solid var(--blue); box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: left; }
+        .card i { font-size: 2rem; color: var(--blue); margin-bottom: 15px; }
+        .card h4 { color: var(--blue); margin-bottom: 8px; }
+
+        /* 3. FAQ SECTION */
+        .faq-wrap { background: white; padding: 40px; border-radius: 20px; text-align: left; margin-top: 50px; }
+        .faq-item { margin-bottom: 25px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
+        .faq-item h4 { color: var(--blue); margin-bottom: 5px; }
+
+        footer { background: #111; color: white; padding: 60px 20px; border-top: 6px solid var(--yellow); }
     </style>
 </head>
 <body>
 
-<div class="ticker">MISSION 2026: DIGITAL ETHIOPIA PORTAL ACTIVE</div>
+<div class="ticker">MISSION 2026: Official National Digital Portal Active • Verified by Fayda ID</div>
 
 <div class="container">
-    <div id="login-area">
-        <h1>ልማት Hub</h1>
+    <div class="login-box">
+        <h1 style="font-size: 3rem; color: var(--yellow);">ልማት Hub</h1>
         <p>Enter Fayda ID to Unlock 10 Tracks & FAQ</p>
-        <input type="number" id="idInput" placeholder="Enter National ID Number">
+        <input type="number" class="input-fld" placeholder="Enter National ID Number">
         <br>
-        <button onclick="startPortal()">VERIFY & ENTER</button>
+        <button class="btn-v">Verify & Start</button>
     </div>
 
-    <div id="dashboard">
-        <h2 style="color:#003973">Welcome to your Dashboard</h2>
-        <p>Status: <b>Verified Member</b></p>
-        <hr>
-        <h3>The 10 Official Tracks:</h3>
-        <div class="track-grid">
-            <div class="track">1. AI Engineering</div>
-            <div class="track">2. Cyber Security</div>
-            <div class="track">3. Data Science</div>
-            <div class="track">4. Cloud DevOps</div>
-            <div class="track">5. Full-Stack Web</div>
-            <div class="track">6. Blockchain</div>
-            <div class="track">7. Mobile App Dev</div>
+    <h2 style="color: var(--blue); text-align: left; margin-bottom: 20px;">Official Specializations (10 Tracks)</h2>
+    <div class="grid">
+        <div class="card"><i class="fas fa-robot"></i><h4>AI Engineering</h4><p>Neural networks & automation.</p></div>
+        <div class="card"><i class="fas fa-shield-alt"></i><h4>Cyber Security</h4><p>National network defense.</p></div>
+        <div class="card"><i class="fas fa-code"></i><h4>Full-Stack</h4><p>Modern web architecture.</p></div>
+        <div class="card"><i class="fas fa-database"></i><h4>Data Science</h4><p>Predictive analytics.</p></div>
+        <div class="card"><i class="fas fa-cloud"></i><h4>Cloud DevOps</h4><p>Global infrastructure.</p></div>
+        <div class="card"><i class="fas fa-mobile-alt"></i><h4>Mobile Dev</h4><p>App ecosystem growth.</p></div>
+        <div class="card"><i class="fas fa-link"></i><h4>Blockchain</h4><p>Secure digital ledgers.</p></div>
+        <div class="card"><i class="fas fa-paint-brush"></i><h4>UI/UX Design</h4><p>User-centric design.</p></div>
+        <div class="card"><i class="fas fa-microchip"></i><h4>IoT Systems</h4><p>Smart hardware systems.</p></div>
+        <div class="card"><i class="fas fa-landmark"></i><h4>Fintech</h4><p>Digital banking tools.</p></div>
+    </div>
+
+    <div class="faq-wrap">
+        <h2 style="color: var(--blue); margin-bottom: 30px;">Frequently Asked Questions</h2>
+        <div class="faq-item"><h4>Is this program free?</h4><p>Yes, all tracks are fully funded for verified citizens.</p></div>
+        <div class="faq-item"><h4>Is ID required?</h4><p>Yes, a valid Fayda ID is mandatory for national certification.</p></div>
+        <div class="faq-item"><h4>When do classes start?</h4><p>New cohorts begin the first Monday of every month.</p></div>
+    </div>
+</div>
+
+<footer>
+    <p>© 2026 ልማት Hub | Official Fayda National ID Partner</p>
+    <p style="color:#666; font-size:0.8rem; margin-top:10px;">Empowering Ethiopia's Digital Transformation</p>
+</footer>
+
+</body>
+</html>
