--- a/index.html
+++ b/index.html
@@ -3,76 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Digital 2026</title>
+    <title>ልማት Hub | Ethiopia 2026</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; }
+        :root { --blue: #003973; --yellow: #FFD700; --light: #f8f9fa; }
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
-        body { background: var(--bg); color: #333; text-align: center; }
+        body { background: white; color: #333; line-height: 1.6; }
 
-        /* TICKER */
-        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; position: fixed; width: 100%; top: 0; z-index: 1000; }
-        
-        .container { max-width: 1100px; margin: 80px auto 40px; padding: 20px; }
+        /* YELLOW TOP TICKER */
+        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; position: sticky; top: 0; z-index: 2000; font-size: 0.9rem; }
 
-        /* 1. LOGIN SECTION */
-        .login-box { background: var(--blue); color: white; padding: 50px 20px; border-radius: 20px; border: 4px solid var(--yellow); margin-bottom: 50px; }
-        .input-fld { padding: 15px; width: 80%; max-width: 400px; margin: 20px 0; border-radius: 10px; border: none; font-size: 1.2rem; text-align: center; }
-        .btn-v { background: var(--yellow); color: var(--blue); padding: 18px 40px; border: none; border-radius: 10px; font-weight: 900; cursor: pointer; text-transform: uppercase; }
+        /* NAVIGATION BAR */
+        nav { display: flex; justify-content: space-between; align-items: center; padding: 20px 8%; background: white; border-bottom: 1px solid #eee; position: sticky; top: 40px; z-index: 1000; }
+        .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
+        .nav-links { display: flex; gap: 25px; align-items: center; }
+        .nav-links a { text-decoration: none; color: #555; font-weight: 500; font-size: 0.95rem; }
+        .join-btn { background: var(--yellow); color: var(--blue); padding: 10px 25px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; box-shadow: 2px 2px 0px var(--blue); }
 
-        /* 2. THE 10 TRACKS GRID */
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin: 40px 0; }
-        .card { background: white; padding: 25px; border-radius: 15px; border-top: 6px solid var(--blue); box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: left; }
+        .container { max-width: 1100px; margin: 0 auto; padding: 60px 5%; }
+
+        /* PORTAL LOGIN CARD */
+        .login-section { background: var(--blue); color: white; padding: 60px 20px; border-radius: 15px; text-align: center; border: 3px solid var(--yellow); margin-bottom: 80px; }
+        .input-box { width: 90%; max-width: 450px; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
+        .verify-btn { background: var(--yellow); color: var(--blue); padding: 15px 40px; border: none; border-radius: 8px; font-weight: 800; cursor: pointer; text-transform: uppercase; }
+
+        /* 10 TRACKS GRID */
+        .section-title { color: var(--blue); margin-bottom: 30px; font-size: 1.8rem; border-left: 5px solid var(--yellow); padding-left: 15px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; margin-bottom: 80px; }
+        .card { background: var(--light); padding: 30px; border-radius: 12px; border-top: 5px solid var(--blue); transition: 0.3s; }
+        .card:hover { transform: translateY(-5px); border-top-color: var(--yellow); box-shadow: 0 10px 20px rgba(0,0,0,0.05); }
         .card i { font-size: 2rem; color: var(--blue); margin-bottom: 15px; }
-        .card h4 { color: var(--blue); margin-bottom: 8px; }
+        .card h4 { color: var(--blue); margin-bottom: 10px; }
 
-        /* 3. FAQ SECTION */
-        .faq-wrap { background: white; padding: 40px; border-radius: 20px; text-align: left; margin-top: 50px; }
-        .faq-item { margin-bottom: 25px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
-        .faq-item h4 { color: var(--blue); margin-bottom: 5px; }
+        /* FAQ SECTION */
+        .faq-container { margin-bottom: 80px; }
+        .faq-item { margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 20px; }
+        .faq-item h3 { color: var(--blue); margin-bottom: 10px; font-size: 1.2rem; }
+        .faq-item p { color: #666; }
 
-        footer { background: #111; color: white; padding: 60px 20px; border-top: 6px solid var(--yellow); }
+        /* DETAILED FOOTER */
+        footer { background: #111; color: white; padding: 80px 8% 40px; }
+        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; margin-bottom: 50px; text-align: left; }
+        .footer-col h4 { color: var(--yellow); margin-bottom: 20px; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 1px; }
+        .footer-col p, .footer-col a { color: #bbb; text-decoration: none; font-size: 0.9rem; display: block; margin-bottom: 10px; }
+        .footer-bottom { border-top: 1px solid #333; padding-top: 30px; text-align: center; color: #777; font-size: 0.85rem; }
     </style>
 </head>
 <body>
 
-<div class="ticker">MISSION 2026: Official National Digital Portal Active • Verified by Fayda ID</div>
+<div class="ticker">ENROLLMENT OPEN: AI Engineering Cohort • Digital Ethiopia 2026 Strategy • Verified by Fayda National ID • Join the Mission!</div>
+
+<nav>
+    <a href="#" class="logo">ልማት Hub</a>
+    <div class="nav-links">
+        <a href="#about">About</a>
+        <a href="#tracks">10 Tracks</a>
+        <a href="#faq">FAQ</a>
+        <a href="#" class="join-btn">JOIN NOW</a>
+    </div>
+</nav>
 
 <div class="container">
-    <div class="login-box">
-        <h1 style="font-size: 3rem; color: var(--yellow);">ልማት Hub</h1>
-        <p>Enter Fayda ID to Unlock 10 Tracks & FAQ</p>
-        <input type="number" class="input-fld" placeholder="Enter National ID Number">
+    <div class="login-section">
+        <h1 style="font-size: 2.5rem; margin-bottom: 10px;">Ethiopia's 2026 Digital Mission</h1>
+        <p style="opacity: 0.9;">Powered by National ID Verification</p>
+        <input type="number" class="input-box" placeholder="Enter Fayda ID to access dashboard">
         <br>
-        <button class="btn-v">Verify & Start</button>
+        <button class="verify-btn">VERIFY & ENTER</button>
     </div>
 
-    <h2 style="color: var(--blue); text-align: left; margin-bottom: 20px;">Official Specializations (10 Tracks)</h2>
+    <h2 id="tracks" class="section-title">Official Specializations (10 Tracks)</h2>
     <div class="grid">
         <div class="card"><i class="fas fa-robot"></i><h4>AI Engineering</h4><p>Neural networks & automation.</p></div>
-        <div class="card"><i class="fas fa-shield-alt"></i><h4>Cyber Security</h4><p>National network defense.</p></div>
-        <div class="card"><i class="fas fa-code"></i><h4>Full-Stack</h4><p>Modern web architecture.</p></div>
-        <div class="card"><i class="fas fa-database"></i><h4>Data Science</h4><p>Predictive analytics.</p></div>
-        <div class="card"><i class="fas fa-cloud"></i><h4>Cloud DevOps</h4><p>Global infrastructure.</p></div>
-        <div class="card"><i class="fas fa-mobile-alt"></i><h4>Mobile Dev</h4><p>App ecosystem growth.</p></div>
+        <div class="card"><i class="fas fa-shield-alt"></i><h4>Cyber Security</h4><p>National defense systems.</p></div>
+        <div class="card"><i class="fas fa-code"></i><h4>Full-Stack</h4><p>Web app architecture.</p></div>
+        <div class="card"><i class="fas fa-database"></i><h4>Data Science</h4><p>Big data analytics.</p></div>
+        <div class="card"><i class="fas fa-cloud"></i><h4>Cloud DevOps</h4><p>Infrastructure scaling.</p></div>
+        <div class="card"><i class="fas fa-mobile-alt"></i><h4>Mobile Dev</h4><p>App development.</p></div>
         <div class="card"><i class="fas fa-link"></i><h4>Blockchain</h4><p>Secure digital ledgers.</p></div>
-        <div class="card"><i class="fas fa-paint-brush"></i><h4>UI/UX Design</h4><p>User-centric design.</p></div>
-        <div class="card"><i class="fas fa-microchip"></i><h4>IoT Systems</h4><p>Smart hardware systems.</p></div>
-        <div class="card"><i class="fas fa-landmark"></i><h4>Fintech</h4><p>Digital banking tools.</p></div>
+        <div class="card"><i class="fas fa-paint-brush"></i><h4>UI/UX Design</h4><p>Product experience.</p></div>
+        <div class="card"><i class="fas fa-microchip"></i><h4>IoT Systems</h4><p>Smart city hardware.</p></div>
+        <div class="card"><i class="fas fa-landmark"></i><h4>Fintech</h4><p>Digital banking.</p></div>
     </div>
 
-    <div class="faq-wrap">
-        <h2 style="color: var(--blue); margin-bottom: 30px;">Frequently Asked Questions</h2>
-        <div class="faq-item"><h4>Is this program free?</h4><p>Yes, all tracks are fully funded for verified citizens.</p></div>
-        <div class="faq-item"><h4>Is ID required?</h4><p>Yes, a valid Fayda ID is mandatory for national certification.</p></div>
-        <div class="faq-item"><h4>When do classes start?</h4><p>New cohorts begin the first Monday of every month.</p></div>
-    </div>
-</div>
-
-<footer>
-    <p>© 2026 ልማት Hub | Official Fayda National ID Partner</p>
-    <p style="color:#666; font-size:0.8rem; margin-top:10px;">Empowering Ethiopia's Digital Transformation</p>
-</footer>
-
-</body>
-</html>
+    <div id="faq" class="faq-container">
+        <h2 class="section-title">Frequently Asked Questions</h2>
+        <div class="faq-item"><h3>Is this program free?</h3>
