--- a/index.html
+++ b/index.html
@@ -88,4 +88,35 @@
 
     <div id="faq" class="faq-container">
         <h2 class="section-title">Frequently Asked Questions</h2>
-        <div class="faq-item"><h3>Is this program free?</h3>
+        <div class="faq-item"><h3>Is this program free?</h3><p>Yes, it is fully funded by the Digital Ethiopia 2026 initiative for verified citizens.</p></div>
+        <div class="faq-item"><h3>Is Fayda ID required?</h3><p>Yes, all certifications are linked to your National ID for verification.</p></div>
+        <div class="faq-item"><h3>Can I take multiple tracks?</h3><p>Citizens can enroll in one primary track at a time to ensure high-quality learning.</p></div>
+    </div>
+</div>
+
+<footer>
+    <div class="footer-grid">
+        <div class="footer-col">
+            <h4>ልማት Hub</h4>
+            <p>Ethiopia's leading digital talent accelerator, building the tech workforce of 2026.</p>
+        </div>
+        <div class="footer-col">
+            <h4>Quick Links</h4>
+            <a href="#">Mission Statement</a>
+            <a href="#">Curriculum</a>
+            <a href="#">Support Center</a>
+        </div>
+        <div class="footer-col">
+            <h4>Contact Us</h4>
+            <p>Email: contact@lemathub.et</p>
+            <p>Location: Addis Ababa, Ethiopia</p>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>© 2026 ልማት Hub | Official Fayda National ID Partner</p>
+        <p style="margin-top:10px;">Empowering Ethiopia's Digital Transformation.</p>
+    </div>
+</footer>
+
+</body>
+</html>
