--- a/index.html
+++ b/index.html
@@ -10,113 +10,75 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
         body { background: white; color: #333; line-height: 1.6; }
 
-        /* YELLOW TOP TICKER */
+        /* HEADER COMPONENTS */
         .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; position: sticky; top: 0; z-index: 2000; font-size: 0.9rem; }
-
-        /* NAVIGATION BAR */
+        
         nav { display: flex; justify-content: space-between; align-items: center; padding: 20px 8%; background: white; border-bottom: 1px solid #eee; position: sticky; top: 40px; z-index: 1000; }
         .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
-        .nav-links { display: flex; gap: 25px; align-items: center; }
-        .nav-links a { text-decoration: none; color: #555; font-weight: 500; font-size: 0.95rem; }
+        
+        .nav-right { display: flex; gap: 20px; align-items: center; }
+        .lang-select { padding: 5px 10px; border-radius: 5px; border: 1px solid #ddd; font-weight: bold; color: var(--blue); cursor: pointer; }
         .join-btn { background: var(--yellow); color: var(--blue); padding: 10px 25px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; box-shadow: 2px 2px 0px var(--blue); }
 
         .container { max-width: 1100px; margin: 0 auto; padding: 60px 5%; }
 
-        /* PORTAL LOGIN CARD */
+        /* PORTAL CARD */
         .login-section { background: var(--blue); color: white; padding: 60px 20px; border-radius: 15px; text-align: center; border: 3px solid var(--yellow); margin-bottom: 80px; }
         .input-box { width: 90%; max-width: 450px; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
         .verify-btn { background: var(--yellow); color: var(--blue); padding: 15px 40px; border: none; border-radius: 8px; font-weight: 800; cursor: pointer; text-transform: uppercase; }
 
-        /* 10 TRACKS GRID */
+        /* 10 TRACKS */
         .section-title { color: var(--blue); margin-bottom: 30px; font-size: 1.8rem; border-left: 5px solid var(--yellow); padding-left: 15px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; margin-bottom: 80px; }
-        .card { background: var(--light); padding: 30px; border-radius: 12px; border-top: 5px solid var(--blue); transition: 0.3s; }
-        .card:hover { transform: translateY(-5px); border-top-color: var(--yellow); box-shadow: 0 10px 20px rgba(0,0,0,0.05); }
+        .card { background: var(--light); padding: 30px; border-radius: 12px; border-top: 5px solid var(--blue); }
         .card i { font-size: 2rem; color: var(--blue); margin-bottom: 15px; }
-        .card h4 { color: var(--blue); margin-bottom: 10px; }
 
-        /* FAQ SECTION */
-        .faq-container { margin-bottom: 80px; }
-        .faq-item { margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 20px; }
-        .faq-item h3 { color: var(--blue); margin-bottom: 10px; font-size: 1.2rem; }
-        .faq-item p { color: #666; }
-
-        /* DETAILED FOOTER */
+        /* FOOTER */
         footer { background: #111; color: white; padding: 80px 8% 40px; }
-        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; margin-bottom: 50px; text-align: left; }
-        .footer-col h4 { color: var(--yellow); margin-bottom: 20px; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 1px; }
-        .footer-col p, .footer-col a { color: #bbb; text-decoration: none; font-size: 0.9rem; display: block; margin-bottom: 10px; }
-        .footer-bottom { border-top: 1px solid #333; padding-top: 30px; text-align: center; color: #777; font-size: 0.85rem; }
+        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; }
+        .footer-col h4 { color: var(--yellow); margin-bottom: 20px; text-transform: uppercase; font-size: 0.9rem; }
+        .footer-bottom { border-top: 1px solid #333; padding-top: 30px; text-align: center; color: #777; font-size: 0.85rem; margin-top: 40px; }
     </style>
 </head>
 <body>
 
-<div class="ticker">ENROLLMENT OPEN: AI Engineering Cohort • Digital Ethiopia 2026 Strategy • Verified by Fayda National ID • Join the Mission!</div>
+<div class="ticker" id="ticker-text">ENROLLMENT OPEN: AI Engineering Cohort • Digital Ethiopia 2026 Strategy • Verified by Fayda National ID</div>
 
 <nav>
     <a href="#" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#about">About</a>
-        <a href="#tracks">10 Tracks</a>
-        <a href="#faq">FAQ</a>
-        <a href="#" class="join-btn">JOIN NOW</a>
+    <div class="nav-right">
+        <select class="lang-select" onchange="changeLanguage(this.value)">
+            <option value="en">English</option>
+            <option value="am">አማርኛ</option>
+            <option value="om">Afaan Oromoo</option>
+        </select>
+        <a href="#" class="join-btn" id="join-btn">JOIN NOW</a>
     </div>
 </nav>
 
 <div class="container">
     <div class="login-section">
-        <h1 style="font-size: 2.5rem; margin-bottom: 10px;">Ethiopia's 2026 Digital Mission</h1>
-        <p style="opacity: 0.9;">Powered by National ID Verification</p>
-        <input type="number" class="input-box" placeholder="Enter Fayda ID to access dashboard">
+        <h1 id="hero-title">Ethiopia's 2026 Digital Mission</h1>
+        <p id="hero-sub">Powered by National ID Verification</p>
+        <input type="number" class="input-box" id="id-placeholder" placeholder="Enter Fayda ID to access dashboard">
         <br>
-        <button class="verify-btn">VERIFY & ENTER</button>
+        <button class="verify-btn" id="verify-btn">VERIFY & ENTER</button>
     </div>
 
-    <h2 id="tracks" class="section-title">Official Specializations (10 Tracks)</h2>
-    <div class="grid">
-        <div class="card"><i class="fas fa-robot"></i><h4>AI Engineering</h4><p>Neural networks & automation.</p></div>
-        <div class="card"><i class="fas fa-shield-alt"></i><h4>Cyber Security</h4><p>National defense systems.</p></div>
-        <div class="card"><i class="fas fa-code"></i><h4>Full-Stack</h4><p>Web app architecture.</p></div>
-        <div class="card"><i class="fas fa-database"></i><h4>Data Science</h4><p>Big data analytics.</p></div>
-        <div class="card"><i class="fas fa-cloud"></i><h4>Cloud DevOps</h4><p>Infrastructure scaling.</p></div>
-        <div class="card"><i class="fas fa-mobile-alt"></i><h4>Mobile Dev</h4><p>App development.</p></div>
-        <div class="card"><i class="fas fa-link"></i><h4>Blockchain</h4><p>Secure digital ledgers.</p></div>
-        <div class="card"><i class="fas fa-paint-brush"></i><h4>UI/UX Design</h4><p>Product experience.</p></div>
-        <div class="card"><i class="fas fa-microchip"></i><h4>IoT Systems</h4><p>Smart city hardware.</p></div>
-        <div class="card"><i class="fas fa-landmark"></i><h4>Fintech</h4><p>Digital banking.</p></div>
-    </div>
+    <h2 class="section-title" id="tracks-title">Official Specializations (10 Tracks)</h2>
+    <div class="grid" id="tracks-grid">
+        </div>
 
-    <div id="faq" class="faq-container">
-        <h2 class="section-title">Frequently Asked Questions</h2>
-        <div class="faq-item"><h3>Is this program free?</h3><p>Yes, it is fully funded by the Digital Ethiopia 2026 initiative for verified citizens.</p></div>
-        <div class="faq-item"><h3>Is Fayda ID required?</h3><p>Yes, all certifications are linked to your National ID for verification.</p></div>
-        <div class="faq-item"><h3>Can I take multiple tracks?</h3><p>Citizens can enroll in one primary track at a time to ensure high-quality learning.</p></div>
+    <div class="faq-container" id="faq-section">
+        <h2 class="section-title" id="faq-title">Frequently Asked Questions</h2>
+        <div id="faq-list"></div>
     </div>
 </div>
 
 <footer>
     <div class="footer-grid">
         <div class="footer-col">
-            <h4>ልማት Hub</h4>
-            <p>Ethiopia's leading digital talent accelerator, building the tech workforce of 2026.</p>
+            <h4 id="footer-about-title">ልማት Hub</h4>
+            <p id="footer-about-text">Ethiopia's leading digital talent accelerator, building the tech workforce of 2026.</p>
         </div>
-        <div class="footer-col">
-            <h4>Quick Links</h4>
-            <a href="#">Mission Statement</a>
-            <a href="#">Curriculum</a>
-            <a href="#">Support Center</a>
-        </div>
-        <div class="footer-col">
-            <h4>Contact Us</h4>
-            <p>Email: contact@lemathub.et</p>
-            <p>Location: Addis Ababa, Ethiopia</p>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <p>© 2026 ልማት Hub | Official Fayda National ID Partner</p>
-        <p style="margin-top:10px;">Empowering Ethiopia's Digital Transformation.</p>
-    </div>
-</footer>
-
-</body>
-</html>
+        <div class="footer-col
